cabal-version:       3.0
name:                FizzBuzzServer
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/thma/FizzBuzzServer#FizzBuzzServer) for more details.
homepage:            https://github.com/thma/FizzBuzzServer
bug-reports:         https://github.com/thma/FizzBuzzServer/issues
license:             NONE
author:              Mahler, Thomas
maintainer:          Mahler, Thomas <thomas.mahler@ista.com>
copyright:           2022 Mahler, Thomas
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.0.2

source-repository head
  type:                git
  location:            https://github.com/thma/FizzBuzzServer.git

common common-options
  build-depends:       base ^>= 4.15.1.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

executable FizzBuzzServer
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite FizzBuzzServer-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
